# libwignernj

./: .gitignore  .packit.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  libwignernj.pc.in  libwignernj_f03.pc.in  pyproject.toml  setup.py  wignernjConfig.cmake.in
.circleci/: config.yml
.github/workflows/: check-python-wheels.yml  ci.yml  publish-pypi.yml
benchmarks/: .gitignore  Makefile  README.md  bench_compare.c  bench_div128.c  bench_div128_gm.c  bench_mul.c  bench_sweep.c  bench_term_cache.c  profile_3j_4000.c  profile_6j_9j.c
docs/: optimization_notes.md  reference.md
examples/: CMakeLists.txt  README.md
examples/c/: all_symbols.c  quadmath.c  real_basis_lz.c
examples/cpp/: all_symbols.cpp  quadmath.cpp  real_basis_lz.cpp
examples/fortran/: all_symbols.f90  quadmath.F90  real_basis_lz.f90
examples/python/: all_symbols.py  real_basis_lz.py
include/: wigner.h  wigner.hpp  wigner_mpfr.h  wigner_quadmath.h  wignernj.h  wignernj.hpp  wignernj_mpfr.h  wignernj_quadmath.h  wignernj_quadmath.hpp
packaging/fedora/: libwignernj.spec
src/: bigint.c  bigint.h  bigint_arith.h  bigint_flint.c  clebsch.c  fano_x.c  gaunt.c  pfrac.c  pfrac.h  prime_table.inc  prime_table_macros.h  primes.c  primes.h  racah.c  real_ylm_in_complex_ylm.c  scratch.c  scratch.h  wigner3j.c  wigner6j.c  wigner9j.c  wigner_exact.c  wigner_exact.h  wignernj_exact.h  wignernj_tls.h  xalloc.c  xalloc.h
src/fortran/: wigner_f90.F90  wignernj_f90.F90
src/python/: wignermodule.c  wignernjmodule.c
tests/: CMakeLists.txt  gen_refs.py  run_tests.h  test_3j.c  test_6j.c  test_9j.c  test_bigint.c  test_cpp.cpp  test_derived.c  test_gaunt_real.c  test_mpfr.c  test_oom.c  test_pfrac.c  test_precisions.c  test_primes.c  test_quadmath.c  test_real_ylm_in_complex_ylm.c  test_symmetry.c  test_warmup.c
tests/cmake_downstream/: CMakeLists.txt  run.sh  test_c.c  test_cpp.cpp  test_fort.f90
tests/fortran/: test_wigner_fortran.f90  test_wigner_quadmath.F90  test_wignernj_fortran.f90  test_wignernj_quadmath.F90
tests/python/: test_wigner_python.py  test_wignernj_python.py
tools/: changelog_section.py  check_python_wheels.py  check_source_lists.py  check_versions.py  gen_prime_table.py  install_python_metadata.py  verify_python_metadata.py
wigner/: __init__.py
wignernj/: __init__.py
