# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2026 Susi Lehtola
[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wignernj"
version = "0.4.0"
description = "Exact Wigner 3j/6j/9j symbols and related coefficients via prime factorization"
requires-python = ">=3.7"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = ["pytest", "sympy"]
numpy = ["numpy"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
